sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/Fulcrum_Recommendation_History__c.object-meta.xml
<CustomObject>
    <description
  >Immutable audit trail of MarginArc margin recommendations generated for Opportunities</description>
    <label>MarginArc Recommendation History</label>
    <nameField>
        <displayFormat>FRH-{00000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MarginArc Recommendation Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>