sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description
  >AI confidence score (0-100) at time of recommendation</description>
    <label>AI Confidence</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>