sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether the rep clicked Apply Recommendation to accept this</description>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>