sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description
  >Parent Opportunity for this recommendation history record</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Recommendation History</relationshipLabel>
    <relationshipName>Recommendation_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>