sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/Planned_Margin_At_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Margin_At_Time__c</fullName>
    <description
  >Rep planned margin at the time the recommendation was generated</description>
    <label>Planned Margin At Time</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>