sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/Recommendation_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Date__c</fullName>
    <description>When this recommendation was generated</description>
    <label>Recommendation Date</label>
    <type>DateTime</type>
</CustomField>