sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/Recommended_Margin__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Margin__c</fullName>
    <description
  >MarginArc recommended margin percentage at time of recommendation</description>
    <label>Recommended Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>