sfdc/force-app/main/default/objects/Fulcrum_Recommendation_History__c/fields/Win_Probability__c.field-meta.xml
<CustomField>
    <fullName>Win_Probability__c</fullName>
    <description
  >Estimated win probability (0-100) at time of recommendation</description>
    <label>Win Probability</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>